# algorithms

./: 1-1-bits-count.cpp  1-2-bit-value.cpp  1-3-checking-bits.cpp  1-4-inverting-bit.cpp  CMakeLists.txt
module-1/: 1-1-bits-count.cpp  1-2-bit-value.cpp  1-3-checking-bits.cpp  2-1-next-element.cpp  2-2-unimodal-sequence.cpp  2-3-sets-intersection.cpp  2-4-twin-search.cpp  3-1-queue-with-dynamic-buffer.cpp  3-2-deque-with-dynamic-buffer.cpp  3-3-queue-with-stack.cpp  4-1-merge-arrays.cpp  5-1-advertisement.cpp  6-k-mean.cpp  7-3-binary-msd.cpp
module-1/rk/: 1-task.cpp  2-task.cpp
module-2/: 1-1-hash-table.cpp  2-3-post-order.cpp  3-b-tree.cpp  4-2-k-mean.cpp
module-2/5-huffman-compession/: Huffman.h  main-v2.cpp  main.cpp
module-2/rk/: 3-task.cpp
module-3/: 2-count-different-paths.cpp  3-cities.cpp  4-game.cpp  5-mst-kruskal.cpp  5-mst-prim.cpp  CMakeLists.txt
module-3/graph/: arc_graph.cpp  arc_graph.hpp  base.hpp  list_graph.cpp  list_graph.hpp  matrix_graph.cpp  matrix_graph.hpp  set_graph.cpp  set_graph.hpp
module-3/rk/: 1-task.cpp
rk-1/: 1-task.cpp  3-task.cpp  prep.cpp
rk-2/: 1-task.cpp  2-task.cpp  4-task.cpp
rk-3/: 2-task.cpp  3-task.cpp
